syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Ecommerce.Domain.Events.Exported";

message ProductUpdatedEvent {
    string id = 1;
    string description = 2;
    double weight = 3;
    google.protobuf.Timestamp eventTime = 4;
}